--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,27 @@
 #
 # Copyright (c) 2020 C++ Modern Framework
 #
+# ---------------------------------------------------------------------------- #
+
+# ---------------------------------------------------------------------------- #
+# CppMF projects are designed to apply modern CMake practice.
+# As such, a decent CMake version is used to benefit from all new features.
+#
+# Check CMake Release Notes:
+#   https://cmake.org/cmake/help/latest/release/3.21.html
+# ---------------------------------------------------------------------------- #
+cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
+
+# ---------------------------------------------------------------------------- #
+# Project configuration
+# ---------------------------------------------------------------------------- #
+project(
+  ProjectMeta.cmake
+  LANGUAGES C CXX
+)
+
+# ---------------------------------------------------------------------------- #
+#
 # Following variables will be set when calling ProjectMeta
 #
 #   [C]   META_PROJECT_ID :
@@ -21,7 +42,6 @@
 # [C] Conditionals meta data which will be setup based on mandatory meta data.
 #
 # ---------------------------------------------------------------------------- #
-
 
 # This is the main function to call in project CMakeLists.txt
 function(ProjectMeta)
