--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,23 +5,6 @@
 # ---------------------------------------------------------------------------- #
 
 # ---------------------------------------------------------------------------- #
-# CppMF projects are designed to apply modern CMake practice.
-# As such, a decent CMake version is used to benefit from all new features.
-#
-# Check CMake Release Notes:
-#   https://cmake.org/cmake/help/latest/release/3.21.html
-# ---------------------------------------------------------------------------- #
-cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
-
-# ---------------------------------------------------------------------------- #
-# Project configuration
-# ---------------------------------------------------------------------------- #
-project(
-  ProjectMeta.cmake
-  LANGUAGES C CXX
-)
-
-# ---------------------------------------------------------------------------- #
 #
 # Following variables will be set when calling ProjectMeta
 #
@@ -128,7 +111,8 @@ function(ProjectMeta)
 
 endfunction()
 
-function(ProjectMetaInfo)
+# Report project information
+function(ProjectMetaReport)
   message(STATUS "")
   message(STATUS "----------------------------------------------------")
   message(STATUS "                 ProjectMeta.cmake")
