All variables are prefix with PROJECT_ID

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,11 @@ function(ProjectMeta)
     message(FATAL_ERROR "Unknown keywords given to ProjectMeta(): \"${META_UNPARSED_ARGUMENTS}\"")
   endif()
 
+  # Check if PROJECT_NAME is define
+  if(NOT DEFINED META_PROJECT_NAME)
+    message(FATAL_ERROR  "Mandatory project meta data 'PROJECT_NAME' is not defined")
+  endif()
+
   # Helper function to check if mandatory meta data exist
   function(_check_and_set_mandatory_meta_data meta name description)
     if(NOT DEFINED ${meta})
@@ -61,22 +66,6 @@ function(ProjectMeta)
     endif()
   endfunction()
 
-  # Check mandatory meta data
-  _check_and_set_mandatory_meta_data(META_PROJECT_NAME PROJECT_NAME "Project name")
-  _check_and_set_mandatory_meta_data(META_VERSION_MAJOR VERSION_MAJOR "Project major version")
-  _check_and_set_mandatory_meta_data(META_VERSION_MINOR VERSION_MINOR "Project minor version")
-
-  # Check optional meta data
-  _check_and_set_optional_meta_data(META_VERSION_PATCH VERSION_PATCH "Project patch version")
-  _check_and_set_optional_meta_data(META_PROJECT_DESCRIPTION PROJECT_DESCRIPTION "")
-  _check_and_set_optional_meta_data(META_AUTHOR_ORGANIZATION AUTHOR_ORGANIZATION "")
-  _check_and_set_optional_meta_data(META_AUTHOR_DOMAIN AUTHOR_DOMAIN "")
-  _check_and_set_optional_meta_data(META_AUTHOR_MAINTAINER AUTHOR_MAINTAINER "")
-
-  # Project NAME (lower)
-  string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
-  _check_and_set_mandatory_meta_data(PROJECT_NAME_LOWER PROJECT_NAME_LOWER "Project name lower case")
-
   # Project ID
   if(NOT DEFINED META_PROJECT_ID)
     string(MAKE_C_IDENTIFIER ${META_PROJECT_NAME} META_PROJECT_ID)
@@ -88,11 +77,33 @@ function(ProjectMeta)
   string(TOLOWER ${PROJECT_ID} PROJECT_ID_LOWER)
   _check_and_set_mandatory_meta_data(PROJECT_ID_LOWER PROJECT_ID_LOWER "Project ID lower case")
 
-  # Project patch version
+  # Project NAME
+  _check_and_set_mandatory_meta_data(META_PROJECT_NAME PROJECT_NAME "Project name")
+  _check_and_set_mandatory_meta_data(META_PROJECT_NAME ${PROJECT_ID}_PROJECT_NAME "Project name")
+
+  # Project NAME (lower)
+  string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
+  _check_and_set_mandatory_meta_data(PROJECT_NAME_LOWER PROJECT_NAME_LOWER "Project name lower case")
+  _check_and_set_mandatory_meta_data(PROJECT_NAME_LOWER ${PROJECT_ID_LOWER}_PROJECT_NAME_LOWER "Project name lower case")
+
+  # Project description
+  _check_and_set_optional_meta_data(META_PROJECT_DESCRIPTION PROJECT_DESCRIPTION "")
+  _check_and_set_optional_meta_data(META_PROJECT_DESCRIPTION ${PROJECT_ID}_PROJECT_DESCRIPTION "")
+
+  # Version major
+  _check_and_set_mandatory_meta_data(META_VERSION_MAJOR VERSION_MAJOR "Project major version")
+  _check_and_set_mandatory_meta_data(META_VERSION_MAJOR ${PROJECT_ID}_VERSION_MAJOR "Project major version")
+
+  # Version minor
+  _check_and_set_mandatory_meta_data(META_VERSION_MINOR VERSION_MINOR "Project minor version")
+  _check_and_set_mandatory_meta_data(META_VERSION_MINOR ${PROJECT_ID}_VERSION_MINOR "Project minor version")
+
+  # Version patch
   if(NOT DEFINED META_VERSION_PATCH)
     set(META_VERSION_PATCH 0)
   endif()
   _check_and_set_mandatory_meta_data(META_VERSION_PATCH VERSION_PATCH "Project patch version")
+  _check_and_set_mandatory_meta_data(META_VERSION_PATCH ${PROJECT_ID}_VERSION_PATCH "Project patch version")
 
   # Project revision
   if(NOT DEFINED META_VERSION_REVISION)
@@ -103,12 +114,14 @@ function(ProjectMeta)
     endif()
   endif()
   _check_and_set_mandatory_meta_data(META_VERSION_REVISION VERSION_REVISION "Project version revision")
+  _check_and_set_mandatory_meta_data(META_VERSION_REVISION ${PROJECT_ID}_VERSION_REVISION "Project version revision")
 
   # Project version
   if(NOT DEFINED META_VERSION)
     set(META_VERSION "${META_VERSION_MAJOR}.${META_VERSION_MINOR}.${META_VERSION_PATCH}")
   endif()
   _check_and_set_mandatory_meta_data(META_VERSION VERSION "Project version")
+  _check_and_set_mandatory_meta_data(META_VERSION ${PROJECT_ID}_VERSION "Project version")
 
   # Project version name
   if(NOT DEFINED META_VERSION_NAME)
@@ -119,6 +132,19 @@ function(ProjectMeta)
     endif()
   endif()
   _check_and_set_mandatory_meta_data(META_VERSION_NAME VERSION_NAME "Project version name")
+  _check_and_set_mandatory_meta_data(META_VERSION_NAME ${PROJECT_ID}_VERSION_NAME "Project version name")
+
+  # Author organisation
+  _check_and_set_optional_meta_data(META_AUTHOR_ORGANIZATION AUTHOR_ORGANIZATION "")
+  _check_and_set_optional_meta_data(META_AUTHOR_ORGANIZATION ${PROJECT_ID}_AUTHOR_ORGANIZATION "")
+
+  # Author domain
+  _check_and_set_optional_meta_data(META_AUTHOR_DOMAIN AUTHOR_DOMAIN "")
+  _check_and_set_optional_meta_data(META_AUTHOR_DOMAIN ${PROJECT_ID}_AUTHOR_DOMAIN "")
+
+  # Author maintainer
+  _check_and_set_optional_meta_data(META_AUTHOR_MAINTAINER AUTHOR_MAINTAINER "")
+  _check_and_set_optional_meta_data(META_AUTHOR_MAINTAINER ${PROJECT_ID}_AUTHOR_MAINTAINER "")
 
   # Remove check functions
   unset(_check_and_set_mandatory_meta_data)
