--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,8 @@ CPMAddPackage(NAME ProjectMeta.cmake SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 ProjectMeta(
   # Name of the project
   PROJECT_NAME "Test-App"
+  # Project description
+  PROJECT_DESCRIPTION "Test project for ProjectMeta.cmake"
   # Major version
   VERSION_MAJOR 1
   # Minor version
