--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ function(ProjectMeta)
     string(TOUPPER ${META_PROJECT_ID} META_PROJECT_ID)
   endif()
   _check_and_set_mandatory_meta_data(META_PROJECT_ID PROJECT_ID "Project ID")
+  _check_and_set_mandatory_meta_data(META_PROJECT_ID ${PROJECT_ID}_ID "Project ID")
 
   # Project ID (lower)
   string(TOLOWER ${PROJECT_ID} PROJECT_ID_LOWER)
@@ -169,27 +170,33 @@ function(ProjectMeta)
 
 endfunction()
 
+function(_output_var var)
+  if(DEFINED ${var})
+    message(STATUS "${var}: ${${var}}")
+  endif ()
+endfunction()
+
 # Report project information
 function(ProjectMetaReport)
   message(STATUS "")
   message(STATUS "----------------------------------------------------")
   message(STATUS "                 ProjectMeta.cmake")
   message(STATUS "")
-  message(STATUS "PROJECT_ID: ${PROJECT_ID}")
-  message(STATUS "PROJECT_NAME: ${PROJECT_NAME}")
-  message(STATUS "PROJECT_DESCRIPTION: ${PROJECT_DESCRIPTION}")
-  message(STATUS "PROJECT_NAMESPACE: ${PROJECT_NAMESPACE}")
-  message(STATUS "PROJECT_COPYRIGHT: ${PROJECT_COPYRIGHT}")
-  message(STATUS "AUTHOR_ORGANIZATION: ${AUTHOR_ORGANIZATION}")
-  message(STATUS "AUTHOR_DOMAIN: ${AUTHOR_DOMAIN}")
-  message(STATUS "AUTHOR_MAINTAINER: ${AUTHOR_MAINTAINER}")
+  _output_var(${PROJECT_ID}_ID)
+  _output_var(${PROJECT_ID}_PROJECT_NAME)
+  _output_var(${PROJECT_ID}_PROJECT_DESCRIPTION)
+  _output_var(${PROJECT_ID}_PROJECT_NAMESPACE)
+  _output_var(${PROJECT_ID}_PROJECT_COPYRIGHT)
+  _output_var(${PROJECT_ID}_AUTHOR_ORGANIZATION)
+  _output_var(${PROJECT_ID}_AUTHOR_DOMAIN)
+  _output_var(${PROJECT_ID}_AUTHOR_MAINTAINER)
   message(STATUS "")
-  message(STATUS "VERSION_MAJOR: ${VERSION_MAJOR}")
-  message(STATUS "VERSION_MINOR: ${VERSION_MINOR}")
-  message(STATUS "VERSION_PATCH: ${VERSION_PATCH}")
-  message(STATUS "VERSION_REVISION: ${VERSION_REVISION}")
-  message(STATUS "VERSION: ${VERSION}")
-  message(STATUS "VERSION_NAME: ${VERSION_NAME}")
+  _output_var(${PROJECT_ID}_VERSION_MAJOR)
+  _output_var(${PROJECT_ID}_VERSION_MINOR)
+  _output_var(${PROJECT_ID}_VERSION_PATCH)
+  _output_var(${PROJECT_ID}_VERSION_REVISION)
+  _output_var(${PROJECT_ID}_VERSION)
+  _output_var(${PROJECT_ID}_VERSION_NAME)
   message(STATUS "")
   message(STATUS "----------------------------------------------------")
   message(STATUS "")
